Update function for eating

--- a/memories/index.html
+++ b/memories/index.html
@@ -55,7 +55,7 @@
 			<span class="comments"># After returning from Thailand, we spent happiness life every day.</span><br/>
 			happy(u, i)<br/>
 			<span class="comments"># We enjoy eating together.</span><br/>
-			study(u, i)<br/>
+			eating(u, i)<br/>
 			<span class="comments"># We enjoy time in Hoi An old town together.</span><br/>
 			traveling(u, i)<br/>
 			<span class="comments"># We enjoy shopping together.</span><br/>
